--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/c/font_4039987_s7h5i4mjk0k.js">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
